Completed our features section

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -12,12 +12,19 @@
         margin-right: -65px;
     }
 
+    &--gutters-large {
+        margin-right: -100px;
+    }
+
     /* direct children of parent */
     &--gutters > div {
         padding-right: 65px;
         /*box-sizing: border-box; added to global*/
     }
    
+    &--gutters-large > div {
+        padding-right: 100px;
+    }
 
     @mixin atMedium {
 
@@ -29,6 +36,11 @@
         &--medium-8 {
             float: left;
             width: 66.66%;
+        }
+
+        &--medium-6 {
+            float: left;
+            width: 50%;
         }
     }
 
