--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,6 +1,6 @@
 .page-section {
 
-    padding: 1.rrem 0;
+    padding: 1rem 0;
 
     @mixin atMedium{
     padding: 4.5rem 0;
@@ -9,5 +9,14 @@
     &--blue {
         background-color: $mainBlue;
         color: #fff;
+    }
+
+    &--testimonials {
+        background-color: #e0e6ef;
+
+        @mixin atLarge {
+            background: url('assets/images/testimonials-bg.jpg') top center no-repeat;
+            background-size: cover;
+        }
     }
 }
