--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,3 +13,7 @@
 @import 'modules/_feature-item';
 @import 'modules/_testimonial';
 @import 'modules/_site-footer';
+@import 'modules/_site-header';
+@import 'modules/_primary-nav';
+@import 'modules/_modal';
+@import 'modules/_social-icons';
